--- a/school_dance/src/main/resources/templates/blogAdd.html
+++ b/school_dance/src/main/resources/templates/blogAdd.html
@@ -13,6 +13,16 @@
 <main>
     <h2>Добавить новость</h2>
     <p>Здесь будут добавляться новости</p>
+    <div class="container mt-5 mb-5">
+        <form action="/blog/add" method="post">
+            <br>
+            <input type="text" name="title" placeholder="Введите название статьи" class="form-control"><br>
+            <input type="text" name="anons" placeholder="Введите анонс статьи" class="form-control"><br>
+            <input type="text" name="date" placeholder="Введите дату статьи" class="form-control"><br>
+            <textarea name="text" placeholder="Введите текст статьи" class="form-control"></textarea><br>
+            <button type="submit" class="btn btn-success">Добавить статью</button>
+        </form>
+    </div>
 </main>
 
 <footer th:insert="blocks/footer :: footer1"></footer>
