--- a/school_dance/src/main/resources/templates/blogAdd.html
+++ b/school_dance/src/main/resources/templates/blogAdd.html
@@ -19,7 +19,8 @@
             <input type="text" name="title" placeholder="Введите название статьи" class="form-control"><br>
             <input type="text" name="anons" placeholder="Введите анонс статьи" class="form-control"><br>
             <input type="text" name="date" placeholder="Введите дату статьи" class="form-control"><br>
-            <textarea name="text" placeholder="Введите текст статьи" class="form-control"></textarea><br>
+            <input type="text" name="text" placeholder="Введите текст статьи" class="form-control"><br>
+<!--            <textarea name="text" placeholder="Введите текст статьи" class="form-control"></textarea><br>-->
             <button type="submit" class="btn btn-success">Добавить статью</button>
         </form>
     </div>
