--- a/school_dance/src/main/resources/templates/home.html
+++ b/school_dance/src/main/resources/templates/home.html
@@ -13,6 +13,29 @@
 <main>
         <h2>Главная</h2>
         <p>Здесь будет содержаться основная информация о сайте</p>
+    <div class="container px-4 py-5" id="custom-cards" >
+        <h2 class="pb-2 border-bottom">Ближайшие конкурсы</h2>
+
+
+            <div class="col">
+                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('unsplash-photo-2.jpg')">
+                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Конкурс</h3>
+                        <ul class="d-flex list-unstyled mt-auto">
+                            <li class="me-auto">
+                            </li>
+                            <li class="d-flex align-items-center me-3">
+                                <small>ГБОУ СОШ №622</small>
+                            </li>
+                            <li class="d-flex align-items-center">
+                                <small>13 марта 2017 года</small>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+
 </main>
 
 <footer th:insert="blocks/footer :: footer1"></footer>
