--- a/school_dance/src/main/resources/templates/blocks/header.html
+++ b/school_dance/src/main/resources/templates/blocks/header.html
@@ -1,5 +1,5 @@
-<div th:fragment="header1">
-  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+<div th:fragment="header1" >
+  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom" >
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
       <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
       <span class="fs-4">Наша компания</span>
@@ -8,6 +8,7 @@
       <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Главная</a></li>
       <li class="nav-item"><a href="/blog" class="nav-link">Новости</a></li>
       <li class="nav-item"><a href="/blog/add" class="nav-link">Добавить новость</a></li>
+      <li class="nav-item"><a href="/registration" class="nav-link">Регистрация</a></li>
       <li class="nav-item"><a href="/contacts" class="nav-link">Контакты</a></li>
       <li class="nav-item"><a href="/about" class="nav-link">О нас</a></li>
     </ul>
