New commit by 04/05/23 - original - VERSION2

--- a/school_dance/src/main/resources/templates/blocks/header.html
+++ b/school_dance/src/main/resources/templates/blocks/header.html
@@ -8,9 +8,11 @@
       <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Главная</a></li>
       <li class="nav-item"><a href="/blog" class="nav-link">Новости</a></li>
       <li class="nav-item"><a href="/blog/add" class="nav-link">Добавить новость</a></li>
+      <li class="nav-item"><a href="/image" class="nav-link">Галерея</a></li>
       <li class="nav-item"><a href="/registration" class="nav-link">Регистрация</a></li>
       <li class="nav-item"><a href="/contacts" class="nav-link">Контакты</a></li>
       <li class="nav-item"><a href="/about" class="nav-link">О нас</a></li>
+
     </ul>
   </header>
 </div>
