--- a/school_dance/src/main/resources/templates/home.html
+++ b/school_dance/src/main/resources/templates/home.html
@@ -17,22 +17,9 @@
         <h2 class="pb-2 border-bottom">Ближайшие конкурсы</h2>
 
 
-            <div class="col">
-                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('unsplash-photo-2.jpg')">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Конкурс</h3>
-                        <ul class="d-flex list-unstyled mt-auto">
-                            <li class="me-auto">
-                            </li>
-                            <li class="d-flex align-items-center me-3">
-                                <small>ГБОУ СОШ №622</small>
-                            </li>
-                            <li class="d-flex align-items-center">
-                                <small>13 марта 2017 года</small>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+            <div class="container">
+                <img src="https://sportishka.com/uploads/posts/2022-11/thumbs/1667566057_18-sportishka-com-p-les-iz-sosen-oboi-19.jpg">
+
             </div>
 
 
